--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,4 @@
 footer.footer
     .footer__icon
         i.fab.fa-bootstrap.fa-2x
-    span.footer__text &copy; 2020 Black Sheep Wall
+    span.footer__text &copy; #{new Date().getFullYear()} Black Sheep Wall
