--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,9 +1,10 @@
 doctype html
 html
     head
-        title Black Sheep Wall
+        <script src="https://kit.fontawesome.com/1bd59263f1.js" crossorigin="anonymous"></script>
+        title #{pageTitle} | #{webSiteName}
     body
+        include ../partials/header
         main
             block content
-        footer
-            span &copy; Black Sheep Wall
+        include ../partials/footer
