--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,9 +1,10 @@
 header.header
     .header__column
-        i.fab.fa-bootstrap.fa-2x
+        a(href=routes.home)
+            i.fab.fa-bootstrap.fa-2x
     .header__column
         ul
             li
-                a(href="#") Join
+                a(href=routes.join) Join
             li
-                a(href="#") Log in
+                a(href=routes.login) Log in
