--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -3,6 +3,9 @@ header.header
         a(href=routes.home)
             i.fab.fa-bootstrap.fa-2x
     .header__column
+        form(action=routes.search, method=get)
+            input(type="text", name="keyword", placeholder="Search")
+    .header__column
         ul
             li
                 a(href=routes.join) Join
