--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -8,6 +8,6 @@ header.header
     .header__column
         ul
             li
-                a(href=routes.join) Join
+                a(href=routes.logIn) Log In
             li
-                a(href=routes.login) Log in
+                a(href=routes.signUp) Sign Up
