--- a/views/search.pug
+++ b/views/search.pug
@@ -1,5 +1,13 @@
 extends layouts/main
+include mixins/videoBlock
 
 block content
     .search__header
         h4 Search result: #{searchKeyword}
+    .search__videos
+        each video in videos
+            +videoBlock({
+                title: video.title,
+                views: video.views,
+                videoFile: video.videoFile
+            })
