fix: name of confirm password

--- a/views/signUp.pug
+++ b/views/signUp.pug
@@ -6,6 +6,6 @@ block content
             input(type="text", name="name", placeholder="Full Name")
             input(type="email", name="email", placeholder="E-mail Address")
             input(type="password", name="password", placeholder="Password")
-            input(type="password", name="confirm-password", placeholder="Confirm Password")
+            input(type="password", name="confirmPassword", placeholder="Confirm Password")
             input(type="submit", value="Sign Up")
         include partials/socialLogIn
