feat: add template for video upload in header

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -14,7 +14,7 @@ header.header
                     a(href=routes.signUp) Sign Up
             else
                 li
-                    a(href=routes.uploadVideo) Upload Video
+                    a(href=`/video${routes.uploadVideo}`) Upload Video
                 li
                     a(href=routes.userInfo(user.id)) User Info
                 li
