--- a/views/signUp.pug
+++ b/views/signUp.pug
@@ -3,9 +3,9 @@ extends layouts/main
 block content
     .form-container
         form(action=routes.signUp, method="post")
-            input(type="text", name="name", placeholder="Full Name")
-            input(type="email", name="email", placeholder="E-mail Address")
-            input(type="password", name="password", placeholder="Password")
-            input(type="password", name="confirmPassword", placeholder="Confirm Password")
+            input(type="text", name="name", placeholder="Full Name", required=true)
+            input(type="email", name="email", placeholder="E-mail Address", required=true)
+            input(type="password", name="password", placeholder="Password", required=true)
+            input(type="password", name="confirmPassword", placeholder="Confirm Password", required=true)
             input(type="submit", value="Sign Up")
         include partials/socialLogIn
