--- a/views/uploadVideo.pug
+++ b/views/uploadVideo.pug
@@ -2,9 +2,9 @@ extends layouts/main
 
 block content
     .form-container
-        form(action=routes.uploadVideo, method="post")
+        form(action=`/video${routes.uploadVideo}`, method="post")
             label(for="video-file") Video File
-            input(type="file", id="video-file", name="video-file")
-            input(type="text", placeholder="Video Title", name="video-title")
-            input(type="text", placeholder="Video Description", name="video-description")
+            input(type="file", id="video-file", name="videoFile", required=true)
+            input(type="text", placeholder="Video Title", name="videoTitle", required=true)
+            input(type="text", placeholder="Video Description", name="videoDescription", required=true)
             input(type="submit", value="Upload Video")
